Analizador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABS
    AND
    AS
    BARRA
    BREAK
    CADENA
    CAPACITY
    CARACTER
    CD
    CI
    CLONE
    COMA
    CONTAINS
    CONTINUE
    DESIGUALDAD
    DIRSTRING
    DIVI
    DP
    ELSE
    ENTERO
    ERR
    FALSE
    FLOAT
    FOR
    FUNCION
    GBAJO
    IF
    IGUAL
    IGUALDAD
    IN
    INSERT
    LD
    LEN
    LET
    LI
    LOOP
    MAIN
    MATCH
    MAYOR
    MAYORIGUAL
    MENOR
    MENORIGUAL
    MOD
    MODULO
    MULTI
    MUT
    NEW
    NOT
    OR
    POW
    POWF
    PRINT
    PUBLICO
    PUNTO
    PUSH
    REFER
    REMOVE
    RESTA
    RETURN
    SQRT
    STRUCT
    SUMA
    TIPOBOOL
    TIPOCHAR
    TIPOFLOAT
    TIPOINT
    TIPOSTRING
    TOOWNED
    TOSTRING
    TRUE
    VECT
    VECTOR
    WCAPACITY
    WHILE

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir
Rule 5     imprimir -> PRINTLN PI expresiones PD PYC
Rule 6     expresiones -> ID

Terminals, with rules where they appear

ABS                  : 
AND                  : 
AS                   : 
BARRA                : 
BREAK                : 
CADENA               : 
CAPACITY             : 
CARACTER             : 
CD                   : 
CI                   : 
CLONE                : 
COMA                 : 
CONTAINS             : 
CONTINUE             : 
DESIGUALDAD          : 
DIRSTRING            : 
DIVI                 : 
DP                   : 
ELSE                 : 
ENTERO               : 
ERR                  : 
FALSE                : 
FLOAT                : 
FOR                  : 
FUNCION              : 
GBAJO                : 
ID                   : 6
IF                   : 
IGUAL                : 
IGUALDAD             : 
IN                   : 
INSERT               : 
LD                   : 
LEN                  : 
LET                  : 
LI                   : 
LOOP                 : 
MAIN                 : 
MATCH                : 
MAYOR                : 
MAYORIGUAL           : 
MENOR                : 
MENORIGUAL           : 
MOD                  : 
MODULO               : 
MULTI                : 
MUT                  : 
NEW                  : 
NOT                  : 
OR                   : 
PD                   : 5
PI                   : 5
POW                  : 
POWF                 : 
PRINT                : 
PRINTLN              : 5
PUBLICO              : 
PUNTO                : 
PUSH                 : 
PYC                  : 5
REFER                : 
REMOVE               : 
RESTA                : 
RETURN               : 
SQRT                 : 
STRUCT               : 
SUMA                 : 
TIPOBOOL             : 
TIPOCHAR             : 
TIPOFLOAT            : 
TIPOINT              : 
TIPOSTRING           : 
TOOWNED              : 
TOSTRING             : 
TRUE                 : 
VECT                 : 
VECTOR               : 
WCAPACITY            : 
WHILE                : 
error                : 

Nonterminals, with rules where they appear

expresiones          : 5
imprimir             : 4
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir
    (5) imprimir -> . PRINTLN PI expresiones PD PYC

    PRINTLN         shift and go to state 5

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir                       shift and go to state 4

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir
    (5) imprimir -> . PRINTLN PI expresiones PD PYC

    $end            reduce using rule 1 (init -> instrucciones .)
    PRINTLN         shift and go to state 5

    instruccion                    shift and go to state 6
    imprimir                       shift and go to state 4

state 3

    (3) instrucciones -> instruccion .

    PRINTLN         reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir .

    PRINTLN         reduce using rule 4 (instruccion -> imprimir .)
    $end            reduce using rule 4 (instruccion -> imprimir .)


state 5

    (5) imprimir -> PRINTLN . PI expresiones PD PYC

    PI              shift and go to state 7


state 6

    (2) instrucciones -> instrucciones instruccion .

    PRINTLN         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 7

    (5) imprimir -> PRINTLN PI . expresiones PD PYC
    (6) expresiones -> . ID

    ID              shift and go to state 9

    expresiones                    shift and go to state 8

state 8

    (5) imprimir -> PRINTLN PI expresiones . PD PYC

    PD              shift and go to state 10


state 9

    (6) expresiones -> ID .

    PD              reduce using rule 6 (expresiones -> ID .)


state 10

    (5) imprimir -> PRINTLN PI expresiones PD . PYC

    PYC             shift and go to state 11


state 11

    (5) imprimir -> PRINTLN PI expresiones PD PYC .

    PRINTLN         reduce using rule 5 (imprimir -> PRINTLN PI expresiones PD PYC .)
    $end            reduce using rule 5 (imprimir -> PRINTLN PI expresiones PD PYC .)

